updated play button font

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <button class="show-success position-fixed start-0 top-0">show success</button>
   <div class="pop-overlay"></div>
   <div class="popup d-flex flex-column justify-content-center align-items-center gap-3 rotate-phone">
-    <div class="message">flip the device to play</div>
+    <div class="message">اقلب الجهاز لتلعب</div>
     <div class="phone"></div>
   </div>
   <div class="game d-flex flex-column justify-content-between">
@@ -72,7 +72,7 @@
     </div>
     <div class="body w-100 d-flex align-items-center gap-3">
       <button class="leftButton arrow disabled rounded-4 d-flex justify-content-center align-items-center">
-        <i class="fa-solid fa-chevron-left"></i>
+        <i class="fa-solid fa-chevron-right"></i>
       </button>
       <div class="body-wrapper h-100 d-flex flex-column align-items-center">
         <div class="cards w-100 row justify-content-center">
@@ -88,7 +88,7 @@
                   <img src="./media/images/seatbelt.svg" alt="Front Image" class="img w-100 h-100" />
                 </div>
                 <div class="text d-flex justify-content-center align-items-center p-2">
-                  <p class="text-item m-0">to fasten the seatbelt</p>
+                  <p class="text-item m-0">ربط حزام الأمان</p>
                 </div>
               </div>
             </div>
@@ -105,7 +105,7 @@
                   <img src="./media/images/locker.svg" alt="Front Image" class="img w-100 h-100 object-fit-contain" />
                 </div>
                 <div class="text d-flex justify-content-center align-items-center p-2">
-                  <p class="text-item m-0">an overhead locker</p>
+                  <p class="text-item m-0">خزانة علوية</p>
                 </div>
               </div>
             </div>
@@ -139,10 +139,9 @@
             </div>
           </div>
         </div>
-
       </div>
       <button class="rightButton arrow rounded-4 d-flex justify-content-center align-items-center">
-        <i class="fa-solid fa-chevron-right"></i>
+        <i class="fa-solid fa-chevron-left"></i>
       </button>
     </div>
     <div class="game-vector banner d-flex align-items-end">
@@ -162,8 +161,8 @@
           <div class="outer-card rounded-1">
             <div class="text-card h-100 d-flex gap-3 justify-content-center align-items-center">
               <div class="content d-flex flex-column align-items-center">
-                <p class="message-text text m-0" text="correct answer">
-                  correct answer
+                <p class="message-text text m-0" text="الإجابات الصحيحة">
+                  الإجابات الصحيحة
                 </p>
                 <p class="score-text text m-0 d-flex justify-content-center gap-2 flex-wrap" text=""></p>
               </div>
@@ -174,10 +173,10 @@
           </div>
           <div class="arrows d-flex justify-content-between">
             <button class="left-arrow arrow disabled d-flex justify-content-center align-items-center rounded-circle">
-              <i class="fa-solid fa-chevron-left"></i>
+              <i class="fa-solid fa-chevron-right"></i>
             </button>
             <button class="right-arrow arrow d-flex justify-content-center align-items-center rounded-circle">
-              <i class="fa-solid fa-chevron-right"></i>
+              <i class="fa-solid fa-chevron-left"></i>
             </button>
           </div>
         </div>
